test: add unit tests

--- a/water/platformio.ini
+++ b/water/platformio.ini
@@ -7,8 +7,17 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+test_framework = unity
+test_ignore = test_local
+build_src_filter = +<*> -<main_local.cpp>
+
+[env:local]
+platform = native
+test_framework = googletest
+lib_deps = fabiobatsilva/ArduinoFake
+test_ignore = test_embedded
+build_src_filter = +<*> -<main_embedded.cpp>
