feat: implement BLE

--- a/water/platformio.ini
+++ b/water/platformio.ini
@@ -14,6 +14,8 @@ framework = arduino
 test_framework = unity
 test_ignore = test_local
 build_src_filter = +<*> -<main_local.cpp>
+lib_deps =
+    h2zero/NimBLE-Arduino@^1.4.1
 
 [env:local]
 platform = native
