--- a/water-module/platformio.ini
+++ b/water-module/platformio.ini
@@ -7,12 +7,14 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
+[platformio]
+default_envs = local
+
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-test_framework = unity
-test_ignore = test_local
+test_ignore = *
 build_src_filter = +<*> -<main_local.cpp>
 lib_deps =
     h2zero/NimBLE-Arduino@^1.4.1
@@ -21,5 +23,4 @@ lib_deps =
 platform = native
 test_framework = googletest
 lib_deps = fabiobatsilva/ArduinoFake
-test_ignore = test_embedded
 build_src_filter = +<*> -<main_embedded.cpp>
