refactor: use standard string

--- a/water-module/platformio.ini
+++ b/water-module/platformio.ini
@@ -23,4 +23,4 @@ lib_deps =
 platform = native
 test_framework = googletest
 lib_deps = fabiobatsilva/ArduinoFake
-build_src_filter = +<*> -<main_embedded.cpp>
+build_src_filter = +<*> -<main_embedded.cpp> -<lib/esp32>
