--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -8,6 +8,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "biome lint .",
     "format": "biome format --write .",
     "check": "biome check ."
@@ -44,8 +46,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
+    "@types/node": "^25.0.8",
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "vitest": "^4.0.17"
   },
   "private": true
 }
