--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -55,10 +55,13 @@
       [
         "react-native-ble-plx",
         {
-          "modes": ["central"],
+          "modes": [
+            "central"
+          ],
           "bluetoothAlwaysPermission": "Autoriser domo-van à se connecter au module de gestion des eaux via Bluetooth."
         }
-      ]
+      ],
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true,
