--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -29,6 +29,7 @@
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
@@ -48,9 +49,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.11",
+    "@testing-library/react": "^16.3.1",
     "@types/base-64": "^1.0.2",
     "@types/node": "^25.0.8",
     "@types/react": "~19.1.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "jsdom": "^27.4.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.17"
   },
