--- a/water-module/platformio.ini
+++ b/water-module/platformio.ini
@@ -10,6 +10,9 @@
 [platformio]
 default_envs = local
 
+[env]
+lib_extra_dirs = ../shared-libs
+
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
