--- a/heater-module/platformio.ini
+++ b/heater-module/platformio.ini
@@ -17,10 +17,13 @@ lib_extra_dirs = ../shared-libs
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+debug_tool = esp-prog
+debug_init_break = tbreak setup
 test_ignore = *
 build_src_filter = +<*> -<main_local.cpp>
 lib_deps =
     h2zero/NimBLE-Arduino@^1.4.1
+    milesburton/DallasTemperature@^3.11.0
 
 [env:local]
 platform = native
