--- a/water-module/platformio.ini
+++ b/water-module/platformio.ini
@@ -17,6 +17,8 @@ lib_extra_dirs = ../shared-libs
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+debug_tool = esp-prog
+debug_init_break = tbreak setup
 test_ignore = *
 build_src_filter = +<*> -<main_local.cpp>
 lib_deps =
