feat: add github workflows

--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -12,7 +12,8 @@
     "test:watch": "vitest",
     "lint": "biome lint .",
     "format": "biome format --write .",
-    "check": "biome check ."
+    "check": "biome check .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
