--- a/.github/workflows/_test-esp32.yml
+++ b/.github/workflows/_test-esp32.yml
@@ -29,5 +29,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install platformio
 
+      - name: Install clang-format
+        run: sudo apt-get install -y clang-format
+
+      - name: Run clang-format check
+        run: |
+          find src lib -name '*.cpp' -o -name '*.h' | xargs clang-format --dry-run --Werror
+
       - name: Run tests
         run: pio test -e local
