feat: add environment info in home screen

--- a/heater-module/platformio.ini
+++ b/heater-module/platformio.ini
@@ -24,6 +24,7 @@ build_src_filter = +<*> -<main_local.cpp>
 lib_deps =
     h2zero/NimBLE-Arduino@^1.4.1
     milesburton/DallasTemperature@^3.11.0
+    adafruit/Adafruit BME280 Library@^2.2.2
 
 [env:local]
 platform = native
